fix(docs-infra): fix sidenav elements being focusable off screen
some elements in the aio sidenav (especially anchors) are still
included in the tab order even though they are not visible, fix
such behavior by removing the `visibility: visible` applied to
some elements overriding the mat-sidenav hidden one and making
them interactable

--- a/aio/src/styles/1-layouts/sidenav/_sidenav.scss
+++ b/aio/src/styles/1-layouts/sidenav/_sidenav.scss
@@ -101,7 +101,6 @@ aio-nav-menu {
 
     .heading-children {
       &.expanded {
-        visibility: visible;
         opacity: 1;
         padding-left: 0;
         max-height: 4000px; // Arbitrary max-height. Can increase if needed. Must have measurement to transition height.
